[tool.poetry]
name = "skqulacs"
version = "0.4.0"
description = "scikit-qulacs is a library for quantum neural network. This library is based on qulacs and named after scikit-learn."
authors = ["Qulacs-Osaka <qulacs.osaka@gmail.com>"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Qulacs-Osaka/scikit-qulacs"
homepage = "https://github.com/Qulacs-Osaka/scikit-qulacs"
documentation = "https://qulacs-osaka.github.io/scikit-qulacs/index.html"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.0"
scipy = "^1.8.1"
scikit-learn = "^1.0.1"
qulacs-osaka = "^0.4.2"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
black = "^22.3.0"
flake8 = "^5.0.0"
isort = "^5.10.1"
mypy = "^0.942"
Sphinx = "^4.3.0"
sphinx-book-theme = "^0.3.0"
ipykernel = "^6.5.0"
myst-nb = "^0.16.0"
pytest-benchmark = "^3.4.1"
pytest-cov = "^3.0.0"
PennyLane = "^0.24.0"
qulacsvis = "^0.3.0"

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
