[tool.poetry]
name = "skqulacs"
version = "0.5.3"
description = "scikit-qulacs is a library for quantum neural network. This library is based on qulacs and named after scikit-learn."
authors = ["Qulacs-Osaka <qulacs.osaka@gmail.com>"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Qulacs-Osaka/scikit-qulacs"
homepage = "https://github.com/Qulacs-Osaka/scikit-qulacs"
documentation = "https://qulacs-osaka.github.io/scikit-qulacs/index.html"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.24.0"
scipy = ">=1.10.0"
scikit-learn = "^1.0.0"
qulacs = ">=0.5.0"
typing-extensions = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pandas = "~1.3.0"
black = "^24.0.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^1.0.1"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
Sphinx = "^5.2.3"
sphinx-book-theme = "^1.0.1"
ipykernel = "^6.16.0"
myst-nb = ">=1.0"

[tool.poetry.group.bench]
optional = true

[tool.poetry.group.bench.dependencies]
pytest-benchmark = "^4.0.0"
PennyLane = "^0.24.0"

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
