[metadata]
name = scikit-qulacs
version = 0.0.1
url = https://github.com/Qulacs-Osaka/scikit-qulacs

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    scipy
    qulacs
    scikit-learn

[pep8]
# Reason why ignoring E203: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html?highlight=slice#id1
ignore = E203,E501
per-file-ignores =
    # imported but unused
    __init__.py: F401
    typing.py: F401
