[metadata]
name = scikit-qulacs
version = 0.0.1
url = https://github.com/Qulacs-Osaka/scikit-qulacs

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    scipy
    qulacs
    scikit-learn

[flake8]
ignore =
    # whitespace before ':' : https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html?highlight=slice#id1
    E203,
    # line too long
    E501,
    # line break before binary operator: https://pep8.org/#break-before-or-after-binary-operator
    W503,
per-file-ignores =
    # imported but unused
    skqulacs/*/__init__.py: F401
    typing.py: F401
