[metadata]
name = scikit-qulacs
version = 0.0.1
url = https://github.com/Qulacs-Osaka/scikit-qulacs
license = MIT

[flake8]
# e203: black treats : as a binary operator
# e231: black doesn't put a space after ,
# e501: black may exceed the line-length to follow other style rules
# w503 or w504: either one needs to be disabled to select w error codes
ignore = E203,E231,E501,W503
max-line-length = 120
select = B,C,E,F,W
per-file-ignores =
    # imported but unused
    skqulacs/*/__init__.py: F401
    typing.py: F401

[mypy]
check_untyped_defs = True
disallow_any_decorated = False
disallow_any_generics = True
disallow_any_unimported = False
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
no_implicit_optional = True
python_version = 3.7
show_error_codes = True
strict_equality = True
strict_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
